--- a/src/scss/utilities/modifiers/_align-content.scss
+++ b/src/scss/utilities/modifiers/_align-content.scss
@@ -1,27 +1,14 @@
-.align-cont-center {
-    align-content: center !important;
-}
-.align-cont-flex-end {
-    align-content: flex-end !important;
-}
-.align-cont-flex-start {
-    align-content: flex-start !important;
-}
-.align-con-space-around {
-    align-content: space-around !important;
-}
-.align-cont-space-between {
-    align-content: space-between !important;
-}
-.align-cont-stretch {
-    align-content: stretch !important;
-}
-.align-cont-inherit {
-    align-content: inherit !important;
-}
-.align-cont-initial {
-    align-content: initial !important;
-}
-.align-cont-unset {
-    align-content: unset !important;
+$propertys: (
+    'center': center,
+    'end': flex-end,
+    'start': flex-start,
+    'around': space-around,
+    'between': space-between,
+    'stretch': stretch,
+);
+
+@each $propertyName, $property in $propertys {
+    .#{align-content}-#{$propertyName} {
+        align-content: $property !important;
+    }
 }
