--- a/src/scss/utilities/modifiers/_main.scss
+++ b/src/scss/utilities/modifiers/_main.scss
@@ -2,3 +2,5 @@
 @import 'src/scss/utilities/modifiers/align-content';
 @import 'src/scss/utilities/modifiers/align-items';
 @import 'src/scss/utilities/modifiers/column';
+@import 'src/scss/utilities/modifiers/flex';
+@import 'src/scss/utilities/modifiers/justify-content';
