--- a/src/flash.scss
+++ b/src/flash.scss
@@ -4,6 +4,9 @@
 //utilities
 @import 'src/scss/utilities/main';
 
+//mixins
+@import 'src/scss/mixins/main';
+
 //components
 @import 'src/scss/components/main';
 
