--- a/src/scss/mixins/_avatar.scss
+++ b/src/scss/mixins/_avatar.scss
@@ -4,12 +4,14 @@
     $border-radius: 100%,
     $border: unquote('')
 ) {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    width: $size;
-    height: $size;
-    border-radius: $border-radius;
-    border: $border;
-    @include smartColor($color);
+    .avatar {
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        width: $size;
+        height: $size;
+        border-radius: $border-radius;
+        border: $border;
+        @include smartColor($color);
+    }
 }
