--- a/src/scss/utilities/_variables.scss
+++ b/src/scss/utilities/_variables.scss
@@ -9,6 +9,11 @@ $font-weight-semibold: 700 !default;
 $font-weight-bold: 800 !default;
 $font-family: 'Roboto', sans-serif;
 
+$title-font-size: 1rem;
+$title-font-weight: $font-weight-medium;
+
+$sub-font-size: 0.8rem;
+
 $border-color: $blue;
 $border-radius: 0.3rem;
 $border: 0.12rem;
