--- a/src/scss/mixins/_main.scss
+++ b/src/scss/mixins/_main.scss
@@ -1,3 +1,4 @@
 @import 'src/scss/mixins/button';
 @import 'src/scss/mixins/avatar';
 @import 'src/scss/mixins/text';
+@import 'src/scss/mixins/alert';
