--- a/css/flash.css
+++ b/css/flash.css
@@ -751,4 +751,59 @@ if your surface color is red it's meaningless the same color for a content.
   margin-bottom: 0.5rem;
 }
 
+.alert {
+  background: #673ab7;
+  color: white;
+  padding: 1.2rem;
+  margin: 1rem 0;
+  border-radius: 0.4rem;
+  font-family: "Roboto", sans-serif;
+  font-weight: 600;
+  letter-spacing: 0.1rem;
+}
+
+.alert-secondary {
+  background: #009688;
+  color: rgba(0, 0, 0, 0.8);
+  padding: 1.2rem;
+  margin: 1rem 0;
+  border-radius: 0.4rem;
+  font-family: "Roboto", sans-serif;
+  font-weight: 600;
+  letter-spacing: 0.1rem;
+}
+
+.alert-warning {
+  background: #f57c00;
+  color: rgba(0, 0, 0, 0.8);
+  padding: 1.2rem;
+  margin: 1rem 0;
+  border-radius: 0.4rem;
+  font-family: "Roboto", sans-serif;
+  font-weight: 600;
+  letter-spacing: 0.1rem;
+}
+
+.alert-error {
+  background: #d32f2f;
+  color: white;
+  padding: 1.2rem;
+  margin: 1rem 0;
+  border-radius: 0.4rem;
+  font-family: "Roboto", sans-serif;
+  font-weight: 600;
+  letter-spacing: 0.1rem;
+}
+
+.alert-done {
+  background: #388e3c;
+  color: rgba(0, 0, 0, 0.8);
+  padding: 1.2rem;
+  margin: 1rem 0;
+  border-radius: 0.4rem;
+  font-family: "Roboto", sans-serif;
+  font-weight: 600;
+  letter-spacing: 0.1rem;
+}
+
 /*# sourceMappingURL=flash.css.map */
