--- a/src/scss/mixins/_alert.scss
+++ b/src/scss/mixins/_alert.scss
@@ -9,6 +9,10 @@
     margin: $margin;
     border-radius: $border-radius;
     font-family: $font-family;
-    font-weight: $font-weight-medium;
+    font-weight: $font-weight;
     letter-spacing: $letter-spacing;
+    .alert-link {
+        color: oppositeColor($color);
+        font-weight: 900;
+    }
 }
