--- a/src/scss/mixins/_alert.scss
+++ b/src/scss/mixins/_alert.scss
@@ -1,8 +1,9 @@
 @mixin alert(
-    $color: $primary,
+    $color: transparent,
     $padding: 1.2rem,
     $margin: 1rem 0,
-    $border-radius: 0.4rem
+    $border-radius: 0.4rem,
+    $border: unquote('')
 ) {
     @include smartColor($color);
     padding: $padding;
@@ -11,6 +12,7 @@
     font-family: $font-family;
     font-weight: $font-weight;
     letter-spacing: $letter-spacing;
+    border: $border;
     .alert-link {
         color: oppositeColor($color);
         font-weight: 900;
