--- a/css/flash.css
+++ b/css/flash.css
@@ -752,8 +752,8 @@ if your surface color is red it's meaningless the same color for a content.
 }
 
 .alert {
-  background: transparent;
-  color: rgba(0, 0, 0, 0.8);
+  background: #673ab7;
+  color: white;
   padding: 1.2rem;
   margin: 1rem 0;
   border-radius: 0.4rem;
