--- a/css/flash.css
+++ b/css/flash.css
@@ -415,9 +415,10 @@ if your surface color is red it's meaningless the same color for a content.
   border-radius: 0.3rem;
   padding: 0.6rem 1.4rem;
   box-shadow: 0 1px 1px 0 rgba(66, 66, 66, 0.08), 0 1px 3px 1px rgba(66, 66, 66, 0.16);
+  text-decoration: none;
 }
 
-.button:enabled:hover {
+.button:hover {
   box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
 }
 
@@ -453,8 +454,13 @@ if your surface color is red it's meaningless the same color for a content.
   transform: translate(-50%, -50%) scale(0);
 }
 
-.button:enabled:hover {
+.button:hover {
   background: #7e57c2;
+  color: rgba(0, 0, 0, 0.8);
+}
+
+.button:disabled {
+  background: #bdbdbd;
   color: rgba(0, 0, 0, 0.8);
 }
 
@@ -471,9 +477,10 @@ if your surface color is red it's meaningless the same color for a content.
   border: solid 0.12rem #673ab7;
   border-radius: 0.3rem;
   padding: 0.6rem 1.4rem;
+  text-decoration: none;
 }
 
-.outlined-button:enabled:hover {
+.outlined-button:hover {
   box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
 }
 
@@ -526,9 +533,10 @@ if your surface color is red it's meaningless the same color for a content.
   border: none;
   border-radius: 0.3rem;
   padding: 0.6rem 1.4rem;
+  text-decoration: none;
 }
 
-.text-button:enabled:hover {
+.text-button:hover {
   box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
 }
 
@@ -582,9 +590,10 @@ if your surface color is red it's meaningless the same color for a content.
   align-items: center;
   width: 3.5rem;
   height: 3.5rem;
+  text-decoration: none;
 }
 
-.icon-button:enabled:hover {
+.icon-button:hover {
   box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
 }
 
@@ -601,12 +610,12 @@ if your surface color is red it's meaningless the same color for a content.
   color: rgba(0, 0, 0, 0.8);
 }
 
-.icon-button:enabled:hover {
+.icon-button:hover {
   background: #7e57c2;
   color: rgba(0, 0, 0, 0.8);
 }
 
-.icon-button:enabled:hover::before {
+.icon-button:hover::before {
   content: '';
   position: absolute;
   padding: 100%;
@@ -619,10 +628,15 @@ if your surface color is red it's meaningless the same color for a content.
   transition: transform 0.75s, opacity 0.75s;
 }
 
-.icon-button:enabled:hover:active::before {
+.icon-button:hover:active::before {
   transition: 0s;
   opacity: 0.8;
   transform: translate(-50%, -50%) scale(0);
+}
+
+.icon-button:disabled {
+  background: #bdbdbd;
+  color: rgba(0, 0, 0, 0.8);
 }
 
 .outlined-icon-button {
@@ -643,9 +657,10 @@ if your surface color is red it's meaningless the same color for a content.
   align-items: center;
   width: 3.5rem;
   height: 3.5rem;
+  text-decoration: none;
 }
 
-.outlined-icon-button:enabled:hover {
+.outlined-icon-button:hover {
   box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
 }
 
